--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node ./bin/startApp.js",
     "devstart": "node ./bin/startApp.js",
-    "serverstart": "SET DEBUG=firstExpressApp:* & npm devstart"
+    "serverstart": "SET DEBUG=node-js-prototyping:* & npm devstart"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
